Move to Spring 2.4.0 and Cloud 2020 M6 Remove warnings in builds Use Slf4j lombok annotation