@@ -2,6 +2,7 @@ plugins {
     id 'java-library-distribution'
     id 'io.freefair.lombok'
     id 'julb-additional-jars'
+    id 'julb-java11'
     id 'org.springframework.boot'
 }
 
@@ -29,6 +30,10 @@ dependencies {
     testImplementation 'net.javacrumbs.json-unit:json-unit'
 }
 
+lombok {
+    config['lombok.log.fieldName'] = 'LOGGER'
+}
+
 jar {
     manifest {
         attributes(
@@ -39,15 +44,20 @@ jar {
 
 test {
     useJUnitPlatform()
+    jvmArgs = ["--add-opens", "java.base/java.lang=ALL-UNNAMED", "-Dlogging.level.root=OFF", "-Dlogging.level.org.springframework=OFF"]
 }
 
 springBoot {
     buildInfo()
 }
 
+bootBuildImage {
+    environment = ["BP_JVM_VERSION" : "11.*"]
+}
+
 bootJar {
     classifier = 'boot'
-    mainClassName = 'me.julb.Application'
+    mainClass = 'me.julb.Application'
     layered()
 }
 
