@@ -1,11 +1,17 @@
 plugins {
 	id 'java-library'
 	id 'io.freefair.lombok'
+    id 'julb-java11'
 	id 'julb-additional-jars'
 }
 
 test {
     useJUnitPlatform()
+    jvmArgs = ["--add-opens", "java.base/java.lang=ALL-UNNAMED", "-Dlogging.level.root=OFF"]
+}
+
+lombok {
+    config['lombok.log.fieldName'] = 'LOGGER'
 }
 
 publishing {
