@@ -1,6 +1,7 @@
 plugins {
 	id 'java-library'
 	id 'io.freefair.lombok'
+    id 'julb-java11'
 	id 'julb-additional-jars'
 }
 
@@ -10,15 +11,19 @@ dependencies {
 	api 'org.springframework.cloud:spring-cloud-starter-gateway'
 	
 	implementation 'org.json:json'
-//	implementation project(':spring-boot-starters:spring-boot-starter-core')
 	implementation project(':spring-boot-starters:spring-boot-starter-logging')
 	implementation project(':spring-boot-starters:spring-boot-starter-mapping')
 	implementation project(':spring-boot-starters:spring-boot-starter-opentracing')
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 }
 
+lombok {
+    config['lombok.log.fieldName'] = 'LOGGER'
+}
+
 test {
     useJUnitPlatform()
+    jvmArgs = ["--add-opens", "java.base/java.lang=ALL-UNNAMED", "-Dlogging.level.root=OFF", "-Dlogging.level.org.springframework=OFF"]
 }
 
 publishing {
